	* Initial package creation.
2016-11-02 Fred Gleason <fredg@paravelsystems.com>
	* Updated 'README'.
2016-11-03 Fred Gleason <fredg@paravelsystems.com>
	* Stubbed out rdlibraryb(1).
2016-11-03 Fred Gleason <fredg@paravelsystems.com>
	* Stubbed out a stream player in 'src/common/streamplayer.cpp' and
	'src/common/streamplayer.h'.
2016-11-04 Fred Gleason <fredg@paravelsystems.com>
	* Got stream audio playout working.
2016-11-15 Fred Gleason <fredg@paravelsystems.com>
	* Added rdbrowserd(8) in 'src/rdbrowserd/'.
2016-12-19 Fred Gleason <fredg@paravelsystems.com>
	* Removed rdbrowserd(8) in 'src/rdbrowserd/'.
2016-12-19 Fred Gleason <fredg@paravelsystems.com>
	* Modified rivendellb(1) to automatically start cart playout when
	a new cart is selected in 'Play' mode.
2016-12-19 Fred Gleason <fredg@paravelsystems.com>
	* Removed the requirement for WebHost.
2016-12-19 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'make install-win32' target.
	* Added a RDLibrary icon in 'icons/rdlibrary.ico'.
2016-12-20 Fred Gleason <fredg@paravelsystems.com>
	* Split the 'StreamPlayer' class into abstract 'StreamPlayer'
	and implementation-specifc 'StreamPlayerGlass' classes.
2016-12-22 Fred Gleason <fredg@paravelsystems.com>
	* Added configure check for libcurl.
	* Added a 'StreamPlayerAlsa' class.
2016-12-22 Fred Gleason <fredg@paravelsystems.com>
	* Modified 'src/common/streamplayer_alsa.cpp' so as to use the
	'DeviceName=' parameter in the [Audio] section of
	rivendell-browser.conf(5).
2016-12-22 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in 'src/common/streamplayer_alsa.cpp' where an invalid
	ALSA device name would fail silently.
2016-12-22 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in 'src/common/streamplayer_alsa.cpp' that caused a
	segfault with ALSA devices using large audio buffers.
2016-12-23 Fred Gleason <fredg@paravelsystems.com>
	* Added PCM24 support in 'src/common/streamplayer_alsa.cpp' and
	'src/common/streamplayer_alsa.h'.