@@ -40,3 +40,6 @@
 2016-12-23 Fred Gleason <fredg@paravelsystems.com>
 	* Added PCM24 support in 'src/common/streamplayer_alsa.cpp' and
 	'src/common/streamplayer_alsa.h'.
+2016-12-23 Fred Gleason <fredg@paravelsystems.com>
+	* Fixed a bug in 'src/common/streamplayer_alsa.cpp' where the error
+	state was not cleared correctly.
